# MSVC-test

./: README.md
test_lib/dynamic_library/: CMakeLists.txt  CMakePresets.json
test_lib/dynamic_library/include/: math_utils.h
test_lib/library_consumer/: CMakeLists.txt
test_lib/library_consumer/src/: main.cpp
